added test implemented Rcpp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,10 @@ export(mz_calc_ion)
 export(mz_from_string)
 export(mz_ppm)
 export(mz_range)
+export(mz_vec_aggregate)
 import(data.table)
 import(magrittr)
+importFrom(Rcpp,sourceCpp)
 importFrom(data.table,":=")
 importFrom(data.table,.BY)
 importFrom(data.table,.EACHI)
@@ -21,3 +23,4 @@ importFrom(data.table,.SD)
 importFrom(data.table,data.table)
 importFrom(magrittr,"%>%")
 importFrom(stringr,str_extract_all)
+useDynLib(Spec2Annot, .registration = TRUE)
