--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,9 +19,12 @@ RoxygenNote: 7.2.3
 Imports: 
     data.table,
     magrittr,
+    Rcpp,
     stringr
 Suggests: 
     testthat (>= 3.0.0),
     covr
 Config/testthat/edition: 3
 LazyData: true
+LinkingTo: 
+    Rcpp
