- fully functional annotate_mz   - Using C++ for smart brute-force implementation   - Added Senior/DBE/nrule scores from scratch

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: Spec2Annot
 Title: Annotation of Mass Spectra
-Version: 0.1
+Version: 0.2
 Authors@R: 
     c(
       person(given = "Sylvain", family = "Dechaumet", email = "sylvain.dechaumet@cea.fr", role = c("aut", "cre")),
       person(given = "Etienne", family = "Thevenot", email = "etienne.thevenot@cea.fr", role = c("ctb")),
       person(given = "Eric", family = "Venot", email = "eric.venot@cea.fr", role = c("rev")),
-      person(given = "Annelaure", family = "Damont", email = "annelaure.damont@cea.fr", role = c("ctb"))
+      person(given = "Annelaure", family = "Damont", email = "annelaure.damont@cea.fr", role = c("ctb")),
+      person(given = "Anaïs", family = "Legrand", email = "anais.legrand@cea.fr", role = c("ctb"))
     )
 Description: This R package implement different way to annotate and query Mass spectra, using brute-force, 
              isotopic or fragmentation pattern, prior informations on losses or adduct, etc...
