--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,17 @@
 
 export("%>%")
 export(add_formula_to_annot)
+export(annot_to_html)
 export(annotate_mz)
 export(brute_force_const)
 export(electron_mass)
 export(element_from_formula)
 export(find_compo_from_mass)
+export(gen_adduct)
 export(gen_formula_from_compo)
+export(gen_isotopes)
+export(gen_losses)
+export(gen_monocharge)
 export(get_dbe)
 export(get_element_from_mass)
 export(get_iso_from_annot)
