up v added c++ for mz_range added table_join using data.table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(mz_from_string)
 export(mz_ppm)
 export(mz_range)
 export(mz_vec_aggregate)
+export(search_db)
 export(string_from_element)
 import(data.table)
 import(magrittr)
