added c++ optimized function to match two table using mz range and rt range: search_db_cpp()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,13 +24,16 @@ export(get_dbe)
 export(get_element_from_mass)
 export(get_iso_from_annot)
 export(get_nrule)
+export(get_range)
 export(get_senior)
+export(match_tables)
 export(mz_calc_ion)
 export(mz_from_string)
 export(mz_ppm)
 export(mz_range)
 export(mz_vec_aggregate)
 export(search_db)
+export(search_db_cpp)
 export(string_from_element)
 import(data.table)
 import(magrittr)
